# ColdReader

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
