[package]
name = "cold-reader"
version = "1.0.0"
description = "Cold Reader - a frosty PDF reader built with Tauri"
authors = ["Cold Reader"]
edition = "2021"

[lib]
name = "cold_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
